--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_ENV=dev
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=hyperf
+DB_DATABASE=mq
 DB_USERNAME=root
 DB_PASSWORD=
 DB_CHARSET=utf8mb4
