增加登录互斥的判定，优化多条件表查询的查询构造器，将互斥判断移入到全局baseAuth中间件中

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 APP_NAME=mqcms
 APP_ENV=dev
 
+# 应用登录互斥设置（admin：后台 api：接口）
+APP_ADMIN_MUTEX=true
+APP_API_MUTEX=true
+
 # db
 DB_DRIVER=mysql
 DB_HOST=localhost
@@ -19,13 +23,14 @@ REDIS_AUTH=(null)
 REDIS_PORT=6379
 REDIS_DB=0
 
-# jwt
+# api jwt
 JWT_API_KEY=
 JWT_API_ISS=
 JWT_API_AUD=
 JWT_API_ID=
 JWT_API_EXP=
 
+# admin jwt
 JWT_ADMIN_KEY=
 JWT_ADMIN_ISS=
 JWT_ADMIN_AUD=
