--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ DB_MAX_IDLE_TIME=60
 
 # redis
 REDIS_HOST=localhost
-REDIS_AUTH=(null)
+REDIS_AUTH=123456
 REDIS_PORT=6379
 REDIS_DB=0
 
@@ -41,4 +41,12 @@ JWT_ADMIN_EXP=
 WECHAT_MINI_APP_ID=
 WECHAT_MINI_APP_SECRET=
 
-
+# 不同版本的访问是通过 header中的 Accept 去控制(需要先开启 API_STRICT)：需要注意的是Accept中需要包含 Standards Tree, Subtype, version, format信息。在.env 中这样配置
+# application/tree.subtype.version+format
+# 请求头信息添加：Accept: application/mq.cms.v1+json
+# 请求头的参数
+API_STRICT=false
+API_STANDARDS_TREE=mq
+API_SUBTYPE=cms
+API_VERSION=v1
+API_DEFAULT_FORMAT=json
