--- a/.env.example
+++ b/.env.example
@@ -27,18 +27,18 @@ REDIS_PORT=6379
 REDIS_DB=0
 
 # api jwt
-JWT_API_KEY=
-JWT_API_ISS=
-JWT_API_AUD=
-JWT_API_ID=
-JWT_API_EXP=
+JWT_API_KEY=WEvrbz%2mleQZ&Rw64OiL!5CV9Yc0xk1
+JWT_API_ISS=api.mqcms.net
+JWT_API_AUD=api.mqcms.net
+JWT_API_ID=api
+JWT_API_EXP=864000
 
 # admin jwt
-JWT_ADMIN_KEY=
-JWT_ADMIN_ISS=
-JWT_ADMIN_AUD=
-JWT_ADMIN_ID=
-JWT_ADMIN_EXP=
+JWT_ADMIN_KEY=cEU04iVaXS8eRMC5F9WDINl!7jk@bqsJ
+JWT_ADMIN_ISS=admin.mqcms.net
+JWT_ADMIN_AUD=admin.mqcms.net
+JWT_ADMIN_ID=admin
+JWT_ADMIN_EXP=86400
 
 # mini program
 WECHAT_MINI_APP_ID=
