--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,9 @@ APP_API_MUTEX=true
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=mq
+DB_DATABASE=mqcms
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 DB_PREFIX=
