优化服务层 增加upload host url

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
+# app
 APP_NAME=mqcms
 APP_ENV=dev
-
-# task
-TASK_WORKER_NUM=4
+APP_UPLOAD_HOST_URL=
 
 # 应用登录互斥设置（admin：后台 api：接口）
 APP_ADMIN_MUTEX=true
 APP_API_MUTEX=true
+
+# task
+TASK_WORKER_NUM=4
 
 # db
 DB_DRIVER=mysql
